<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_padding"
    tools:context=".OptionActivity">

    <TextView
        android:id="@+id/iban_to_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/iban_to_text"
        android:textStyle="bold"
        android:textSize="@dimen/body_size"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/iban_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/ibun_number_text"
        android:inputType="number"
        android:hint="@string/ibun_number_text"
        android:textSize="@dimen/edit_size"
        android:paddingTop="@dimen/edit_padding"
        android:paddingBottom="@dimen/edit_padding"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iban_to_text_view" />

    <TextView
        android:id="@+id/to_recipient_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/to_recipient_text"
        android:textStyle="bold"
        android:textSize="@dimen/body_size"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iban_edit_text" />

    <EditText
        android:id="@+id/to_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/to_name_text"
        android:inputType="textPersonName"
        android:hint="@string/to_name_text"
        android:textSize="@dimen/edit_size"
        android:paddingTop="@dimen/edit_padding"
        android:paddingBottom="@dimen/edit_padding"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/to_recipient_text_view" />

    <Button
        android:id="@+id/next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_button_text"
        android:textSize="@dimen/button_size"
        android:padding="@dimen/button_padding"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/to_edit_text"/>
</androidx.constraintlayout.widget.ConstraintLayout>